# tinyrl

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
adding-environments/: index.html
api/algorithms/: index.html
api/environment/: index.html
api/gridworld/: index.html
api/monitor/: index.html
api/policy/: index.html
api/runner/: index.html
api/types/: index.html
docs/: adding-environments.md  getting-started.md  index.md
docs/api/: algorithms.md  environment.md  gridworld.md  monitor.md  policy.md  runner.md  types.md
examples/: manual_random.py  random_policy.py
getting-started/: index.html
search/: search_index.json
src/tinyrl/: __init__.py  env.py  gridworld.py  monitor.py  runner.py  types.py
src/tinyrl/algorithms/: random.py
src/tinyrl/core/: __init__.py  env.py  policy.py
src/tinyrl/envs/: __init__.py  gridworld.py
