[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyrl"
version = "0.2.0"
description = "A minimal RL toolkit built from scratch for learning and experimenting with RL algorithms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
notebooks = [
    "jupyter",
    "ipython",
    "torch",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.setuptools.packages.find]
where = ["src"]
